# PR-Buddy

./: .eslintrc.json  README.md  jest.config.ts  latest-version.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: main.yml
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  prbuddy.key.pub  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  router.rs
src/components/: debounced-text-input.tsx
src/components/header/: header.styled.tsx  header.tsx
src/constants/: config.ts  events.ts  graphql.ts
src/contexts/: config-context.tsx  pull-requests-context.tsx  repositories-context.tsx
src/contexts/config-context/: config-reducer.ts  index.tsx
src/features/add-repo/: add-repo.styled.tsx  add-repo.tsx  index.ts
src/features/empty-content/: empty-content.styled.tsx  empty-content.tsx
src/features/general-settings-tab/: general-settings-tab.styled.tsx  general-settings-tab.tsx  index.ts
src/features/github-token-settings-tab/: github-token-settings-tab.tsx  index.ts
src/features/pull-requests-list/: index.ts  pull-requests-list.styled.tsx  pull-requests-list.tsx
src/features/repositories-settings-tab/: index.ts  repositories-settings-tab.styled.tsx  (+1 more)
src/hooks/: use-event.ts  use-prs.ts  use-repositories.ts  use-tab-content.ts  use-token.ts
src/typedefs/: app-config.ts  pull-request.ts  repositories.ts
src/types/: app-config.ts  pull-request.ts  repositories.ts
src/utils/: fs-utils.ts  notifications.ts
src/wrappers/: authorization-wrapper.tsx  wizard-init-wrapper.tsx
(+45 files in other folders)
