[package]
name = "PR-Buddy"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "shell-open", "path-all", "notification-all", "fs-all", "macos-private-api", "system-tray"] }
serde = { version = "1.0", features = ["derive"] }
tauri-plugin-positioner = { version = "1.0.4", features = ["system-tray"] }
serde_json = "1.0"
tokio = "1.29.1"
rspc = "1.0.0-rc.5"
axum = "0.6.20"
specta = "2.0.0-rc.1"
tower-http = {version = "0.4.3", features = ["cors"]}
opener = "0.6.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
